# lv_port_linux

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  auto_free_ptr.h  build.sh  lv_conf.defaults  lv_conf.h  lvfont.sh  progress.md  rdp-client.sh  rdp-server.sh  setup.py  vscode.sh
.opencode/: project-summary.md  session-2026-06-10.md
docs/: lv_widgets.txt
lv_image_converter/: CMakeLists.txt  auto_free_ptr.h  heif_helper.cpp  heif_helper.h  img_helper.cpp  img_helper.h  jpeg_helper.cpp  jpeg_helper.h  main.cpp  mainlib.cpp  png_helper.cpp  png_helper.h
scripts/: run_headless.sh
src/: CMakeLists.txt  chart.cpp  chart.h  claude-prompt.txt  config.json  graphics_backend.cpp  graphics_backend.h  main.c  main.cpp  mainwindow.cpp  mainwindow.h  python_binding.cpp  python_wrapper.cpp  python_wrapper.h  setup.py.in
src/atspi/: accessible_node.cpp  accessible_node.h  atspi_bridge.cpp  atspi_bridge.h  atspi_constants.h  atspi_dbus.cpp  atspi_dbus.h
src/configs/: hello-world.json  imageview.json  messagebox.json  stackview.json  tabview.json  testview.json
src/examples/apple-info/: apple-info.json  apple-info.py
src/examples/hello-world/: hello-world.json  hello-world.py
src/examples/hello-world-flags/: fonts  hello-world-flags.json  hello-world-flags.py
src/examples/hello-world-international/: hello-world-international.json  hello-world-international.py
src/examples/imageview/: imageview.json  imageview.py
src/examples/mandelbrot/: mandelbrot.json  mandelbrot.py  record_mandelbrot.py  test_image_update.py  test_mandelbrot.py
src/examples/messagebox/: messagebox.json  messagebox.py
src/examples/restaurant-1/: fonts  restaurant-1.json  restaurant-1.py
src/examples/stackview/: stackview.json  stackview.py
src/examples/tabview/: tabview.json  tabview.py
src/examples/testview/: testview.json
src/font/: CMakeLists.txt  font.cpp  lelefont.cpp  lelefont.h  lelefont.py.cpp  ttc_to_ttf.pe  ttc_to_ttf.sh  ttf_to_lvf.cpp
src/image_builder/: image_builder.cpp  image_builder.h
src/json/: json_helper.cpp  json_helper.h
src/lelewidgets/: lelebase.cpp  lelebase.h  lelebutton.cpp  lelebutton.h  lelebutton.py.cpp  lelecolorwheel.cpp  lelecolorwheel.h  lelecolorwheel.py.cpp  leleevent.cpp  leleevent.h  leleevent.py.cpp  leleimage.cpp  leleimage.h  leleimage.py.cpp  lelelabel.cpp  lelelabel.h  lelelabel.py.cpp  lelemessagebox.cpp  lelemessagebox.h  lelemessagebox.py.cpp  lelenullwidget.cpp  lelenullwidget.h  leleobject.cpp  leleobject.h  leleobject.py.cpp  lelepos.cpp  lelepos.h  lelerollerview.cpp  lelerollerview.h  lelerollerview.py.cpp  lelestackview.cpp  lelestackview.h  lelestyle.cpp  lelestyle.h  lelestyle.py.cpp  leletabview.cpp  leletabview.h  leletextbox.cpp  leletextbox.h  leleview.cpp  (+4 more)
src/lelewidgets/tests/: CMakeLists.txt  lelestyle.cpp
src/lib/: backends.h  driver_backends.c  driver_backends.cpp  driver_backends.h  mouse_cursor_icon.cpp  simulator_util.cpp
src/lib/display_backends/: glfw3.c  wayland.c  wayland.cpp  wayland_xdg_shell.cpp
src/lib/indev_backends/: evdev.c  evdev.cpp
src/lv_image_converter/: CMakeLists.txt  lv_image_converter.cpp  lv_image_converter.h  main.cpp  mainlib.cpp  mainlib.h
src/mandelbrot/: mandelbrot.cpp  mandelbrot.h  mandelbrot_cuda.cu
src/py/: hello-world.py  imageview.py  main.py
src/python/: lelebutton.cpp  leleevent.cpp  lelelabel.cpp  lelemessagebox.cpp  leleobject.cpp  python_binding.cpp  python_helper.cpp  python_helper.h  python_wrapper.cpp  python_wrapper.h
src/res/fonts/: Ubuntu-LI.ttf.lvf  Ubuntu-M.ttf.lvf
src/res/fonts/active/: NotoSansArabic-Bold.16pt.lvf  NotoSansArabic-Bold.40pt.lvf  NotoSansCJKjp-Regular-Alphabetic-10.16pt.lvf  NotoSansCJKjp-Regular-Alphabetic-10.40pt.lvf  NotoSansHebrew-Black.16pt.lvf  NotoSansHebrew-Black.40pt.lvf  NotoSansThai-Medium.16pt.lvf  NotoSansThai-Medium.40pt.lvf  NotoSerifDevanagari-Bold.16pt.lvf  NotoSerifDevanagari-Bold.40pt.lvf  Ubuntu-B.16pt.lvf  Ubuntu-B.40pt.lvf
src/res/foods/panera-bread/: panera-bread-app.mov
src/tr/: tr.cpp  tr.h  tr.py.cpp
